mp4/grade_report.txt
Monad Autograder
Testing mp4 at 2014-10-17 04:12:15

"It is practically impossible to teach good programming to students that have had a prior exposure to BASIC: as potential programmers they are mentally mutilated beyond hope of regeneration." ~ Edsger Dijkstra

Setting up test environment...
Compiling...
================================================================
In file included from unit_tests.cpp:15:
In file included from ./filler.h:268:
./filler.cpp:239:18: error: cannot use dot operator on a type
        animation.addFrame(img);
                 ^
1 error generated.
In file included from unit_tests.cpp:15:
In file included from ./filler.h:268:
./filler.cpp:239:18: error: cannot use dot operator on a type
        animation.addFrame(img);
                 ^
1 error generated.
ld: no input files
clang-3.5: error: no such file or directory: 'unit_tests.o'
make: *** [proxy] Error 1


Running tests...
================================================================
Could not execute test cases


Total score...
================================================================
TOTAL SCORE: 0

